Added sass + live server set up

--- a/index.html
+++ b/index.html
@@ -4,8 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+    <div class="container">
+      <header class="header">
+        <img src="img/logo.svg" alt="">
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link active" href="#" target="_blank">Home</a></li>
+            <li class="nav__item"><a class="nav__link" href="#" target="_blank">Services</a></li>
+            <li class="nav__item"><a class="nav__link" href="#" target="_blank">Projects</a></li>
+            <li class="nav__item"><a class="nav__link nav__link--contact" href="#" target="_blank">Contact me</a></li>
+          </ul>
+        </nav>
+      </header>
+      <section class="hero">
+        <div class="hero__textbox">
+          <h1 class="hero__heading">
+            <span>HI! I’m Vin Pastrana</span>
+            <span>HTML Email Developer</span>
+          </h1>
+          <h2 class="hero__description">
+            Delivering responsive, hand-coded emails
+            with 5+ years of industry experience.
+          </h2>
+          <a href="#" class="btn">Hire Me On Upwork</a>
+        </div>
+        <img src="img/hero-img.png" alt="" class="hero__img">
+      </section>
+      <main>
+        <section class="services">Services</section>
+        <section class="projects">Projects</section>
+        <section class="contact">Contact</section>
+      </main>
+      <footer class="footer">Footer</footer>
+    </div>
 </body>
 </html>
