First working version

--- a/index.html
+++ b/index.html
@@ -41,11 +41,102 @@
         </div>
       </section>
       <main class="main">
-        <section class="services">Services</section>
-        <section class="projects">Projects</section>
-        <section class="contact">Contact</section>
+        <section class="services">
+          <h2 class="title"><img class="title__services" src="img/services.svg" alt=""></h2>
+          <div class="services__cards">
+            <div class="card">
+            <header class="card__header">
+              <h3 class="card__title">Custom Email Template Development</h3>
+            </header>
+            <div class="card__content">
+              <figure class="card__img-container">
+                <img src="img/services-card-img.png" alt="" class="card__img">
+              </figure>
+              <ul class="card__list">
+                <li class="card__item">HTML/CSS Email Templates (Hand-coded, Responsive, Mobile-Friendly)</li>
+                <li class="card__item">Dark Mode Optimized Emails</li>
+                <li class="card__item">Modular Email Templates (for easy reuse and edits)</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card">
+            <header class="card__header">
+              <h3 class="card__title">Email Signature Design & Development</h3>
+            </header>
+            <div class="card__content">
+              <figure class="card__img-container">
+                <img src="img/services-card-img.png" alt="" class="card__img">
+              </figure>
+              <ul class="card__list">
+                <li class="card__item">Responsive & Cross-Client Compatible: HTML/CSS email templates that adapt perfectly across all devices and email clients.</li>
+                <li class="card__item">Pixel-Perfect Design: Accurate conversion of designs into clean, responsive email templates for flawless execution.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card">
+            <header class="card__header">
+              <h3 class="card__title">Email Template Development</h3>
+            </header>
+            <div class="card__content">
+              <figure class="card__img-container">
+                <img src="img/services-card-img.png" alt="" class="card__img">
+              </figure>
+              <ul class="card__list">
+                <li class="card__item">Responsive & Cross-Client Compatible: HTML/CSS email templates that adapt perfectly across all devices and email clients.</li>
+                <li class="card__item">Pixel-Perfect Design: Accurate conversion of designs into clean, responsive email templates for flawless execution.</li>
+              </ul>
+            </div>
+          </div>
+          </div>
+        </section>
+        <section class="projects">
+          <h2 class="title"><img class="title__projects" src="img/projects.svg" alt=""></h2>
+          <div class="projects__tab">
+            <button class="projects__tab-btn projects__tab-btn--active" data-btn="1">Email Templates</button>
+            <button class="projects__tab-btn" data-btn="2">Email Newsletter</button>
+            <button class="projects__tab-btn" data-btn="3">Email Signatures</button>
+          </div>
+          <div class="projects__content-container">
+            <div class="projects__content projects__content--1 projects__content--active">
+              <div class="projects__item"><img src="img/project1.png" alt=""></div>
+              <div class="projects__item"><img src="img/project1.png" alt=""></div>
+              <div class="projects__item"><img src="img/project1.png" alt=""></div>
+              <div class="projects__item"><img src="img/project1.png" alt=""></div>
+              <div class="projects__item"><img src="img/project1.png" alt=""></div>
+              <div class="projects__item"><img src="img/project1.png" alt=""></div>
+            </div>
+            <div class="projects__content projects__content--2">
+              <div class="projects__item">7</div>
+              <div class="projects__item">8</div>
+              <div class="projects__item">9</div>
+              <div class="projects__item">10</div>
+              <div class="projects__item">11</div>
+              <div class="projects__item">12</div>
+            </div>
+            <div class="projects__content projects__content--3">
+              <div class="projects__item">13</div>
+              <div class="projects__item">14</div>
+              <div class="projects__item">15</div>
+              <div class="projects__item">16</div>
+              <div class="projects__item">17</div>
+              <div class="projects__item">18</div>
+            </div>
+          </div>
+        </section>
+        <section class="contact">
+          <h2 class="title"><img class="title__contact" src="img/contact.svg" alt=""></h2>
+          <img class="contact__img" src="img/contact-img.png" alt="">
+          <p class="contact__text">Got a Project?</p>
+          <a href="https://www.upwork.com/freelancers/~01ed5a2f331736e5c1" class="btn btn--upwork btn--contact" aria-label="Hire Me On Upwork">Message Me On Upwork</a>
+        </section>
       </main>
-      <footer class="footer">Footer</footer>
     </div>
+      <footer class="footer">
+        <img src="img/footer-logo.png" alt="" class="footer__img">
+        <p class="footer__copyright">Designed & Developed by Vin Pastrana</p>
+      </footer>
+
+
+<script src="script.js"></script>
 </body>
 </html>
