Added links with smooth scroll

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <div class="container">
-      <header class="header">
+      <header class="header" id="section--1">
         <div class="header__logo-container">
           <img class="header__logo" src="img/logo.svg" alt="">
         </div>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link active" href="#" target="_blank">Home</a></li>
-            <li class="nav__item"><a class="nav__link" href="#" target="_blank">Services</a></li>
-            <li class="nav__item"><a class="nav__link" href="#" target="_blank">Projects</a></li>
-            <li class="nav__item"><a class="btn btn--contact" href="#" target="_blank">Contact me</a></li>
+            <li class="nav__item"><a class="nav__link active" href="#section--1">Home</a></li>
+            <li class="nav__item"><a class="nav__link" href="#section--2">Services</a></li>
+            <li class="nav__item"><a class="nav__link" href="#section--3">Projects</a></li>
+            <li class="nav__item"><a class="btn btn--contact" href="https://www.upwork.com/freelancers/~01ed5a2f331736e5c1" target="_blank">Contact me</a></li>
           </ul>
         </nav>
       </header>
@@ -41,7 +41,7 @@
         </div>
       </section>
       <main class="main">
-        <section class="services">
+        <section class="services" id="section--2">
           <h2 class="title"><img class="title__services" src="img/services.svg" alt=""></h2>
           <div class="services__cards">
             <div class="card">
@@ -89,7 +89,7 @@
           </div>
           </div>
         </section>
-        <section class="projects">
+        <section class="projects" id="section--3">
           <h2 class="title"><img class="title__projects" src="img/projects.svg" alt=""></h2>
           <div class="projects__tab">
             <button class="projects__tab-btn projects__tab-btn--active" data-btn="1">Email Templates</button>
@@ -123,7 +123,7 @@
             </div>
           </div>
         </section>
-        <section class="contact">
+        <section class="contact" id="section--4">
           <h2 class="title"><img class="title__contact" src="img/contact.svg" alt=""></h2>
           <img class="contact__img" src="img/contact-img.png" alt="">
           <p class="contact__text">Got a Project?</p>
